objects/YouTube_Channel_Stats__c/YouTube_Channel_Stats__c.object-meta.xml
<CustomObject>
    <label>YouTube Channel Stats</label>
    <nameField>
        <displayFormat>YTS{0000}</displayFormat>
        <label>YouTube Channel Stats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>YouTube Channel Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>