objects/YouTube_Channel_Stats__c/fields/Subscribers__c.field-meta.xml
<CustomField>
    <fullName>Subscribers__c</fullName>
    <label># Subscribers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>