objects/YouTube_Channel_Stats__c/fields/Videos__c.field-meta.xml
<CustomField>
    <fullName>Videos__c</fullName>
    <label># Videos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>