objects/YouTube_Channel_Stats__c/fields/Views__c.field-meta.xml
<CustomField>
    <fullName>Views__c</fullName>
    <label># Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>