objects/YouTube_Channel_Stats__c/fields/YouTube_Channel__c.field-meta.xml
<CustomField>
    <fullName>YouTube_Channel__c</fullName>
    <label>YouTube Channel</label>
    <referenceTo>YouTube_Channel__c</referenceTo>
    <relationshipLabel>YouTube Channel Stats</relationshipLabel>
    <relationshipName>YouTube_Channel_Stats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>